wip upsertAllDeleteTest